--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
 const tracks = [
 
 
-  { file: "Kannolam - sonu .s.raj", src: "https://files.catbox.moe/n1obus.mp3" },
-{ file: "Ee pooveyilil - Sagar Cinema", src: "https://files.catbox.moe/2kusr6.mp3" },
-{ file: "Neela Shalabhame - Ashwin Kumar", src: "https://files.catbox.moe/djewuz.mp3" },
-{ file: "Priyamullavane - AKHILA MAYA", src: "https://files.catbox.moe/igi4mc.mp3" },
+  { file: "Kannolam", src: "https://files.catbox.moe/n1obus.mp3" },
+{ file: "Ee pooveyilil", src: "https://files.catbox.moe/2kusr6.mp3" },
+{ file: "Neela Shalabhame", src: "https://files.catbox.moe/djewuz.mp3" },
+{ file: "Priyamullavane", src: "https://files.catbox.moe/igi4mc.mp3" },
 { file: "Chillu jalaka vathilil - Classmates", src: "https://files.catbox.moe/lqg351.mp3" },
 { file: "Enguninnu vanna - Calcutta News", src: "https://files.catbox.moe/1w6aec.mp3" },
 
