--- a/index.html
+++ b/index.html
@@ -372,5 +372,7 @@ const tracks = [
       navigator.serviceWorker.register('sw.js');
     }
   </script>
+<p><center>  102 tracks</br>
+  416 minutes </center></p>
 </body>
 </html>
