--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       background: #121212;
       color: #f0f0f0;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
@@ -103,6 +104,11 @@
       background: #007bff;
       border-radius: 4px;
     }
+    .track-info {
+      margin-top: 15px;
+      color: #999;
+      font-size: 0.9rem;
+    }
     @media (max-width: 480px) {
       #player { padding: 15px; }
       h2 { font-size: 1.3rem; }
@@ -128,15 +134,11 @@
     </div>
     <ul id="playlist"></ul>
   </div>
-
-
-
-
-
-
-
-
-
+  
+  <div class="track-info">
+   <br> 102 tracks<br>
+    416 minutes
+  </div>
 
   <script>
     
@@ -372,7 +374,5 @@ const tracks = [
       navigator.serviceWorker.register('sw.js');
     }
   </script>
-<p><center>  102 tracks</br>
-  416 minutes </center></p>
 </body>
 </html>
