--- a/index.html
+++ b/index.html
@@ -145,6 +145,12 @@
 const tracks = [
 
 
+
+  { file: "Nee Akaleyano", src: "https://files.catbox.moe/mwdqz7.mp3" },
+{ file: "Nila Veyilil", src: "https://files.catbox.moe/s2w20i.mp3" },
+{ file: "Kaanal Kaatte", src: "https://files.catbox.moe/1eby5u.mp3" },
+
+
   { file: "Kannolam", src: "https://files.catbox.moe/n1obus.mp3" },
 { file: "Ee pooveyilil", src: "https://files.catbox.moe/2kusr6.mp3" },
 { file: "Neela Shalabhame", src: "https://files.catbox.moe/djewuz.mp3" },
