--- a/index.html
+++ b/index.html
@@ -146,6 +146,18 @@ const tracks = [
 
 
 
+
+{ file: "Uyirin Naadhane", src: "https://files.catbox.moe/fvj65o.m4a" },
+{ file: "Thathamma peru", src: "https://files.catbox.moe/pr7ad3.mp3" },
+{ file: "Swayamvara Chandrike", src: "https://files.catbox.moe/fgwikp.m4a" },
+{ file: "Sun Raha Hai", src: "https://files.catbox.moe/p7oy4t.m4a" },
+{ file: "Nilaa paithale", src: "https://files.catbox.moe/9pyyn1.m4a" },
+{ file: "Neramay Nilavile", src: "https://files.catbox.moe/9yhp0q.m4a" },
+{ file: "Abhi mujh mein", src: "https://files.catbox.moe/aukcf8.m4a" },
+
+
+  
+
   { file: "Nee Akaleyano", src: "https://files.catbox.moe/mwdqz7.mp3" },
 { file: "Nila Veyilil", src: "https://files.catbox.moe/s2w20i.mp3" },
 { file: "Kaanal Kaatte", src: "https://files.catbox.moe/1eby5u.mp3" },
