--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
   </div>
   
   <div class="track-info">
-   <br> 110 tracks<br>
-    431 minutes
+   <br> 120 tracks<br>
+    448 minutes
   </div>
 
   <script>
@@ -154,6 +154,17 @@ const tracks = [
 { file: "Nilaa paithale", src: "https://files.catbox.moe/9pyyn1.m4a" },
 { file: "Neramay Nilavile", src: "https://files.catbox.moe/9yhp0q.m4a" },
 { file: "Abhi mujh mein", src: "https://files.catbox.moe/aukcf8.m4a" },
+
+{ file: "minni minni", src: "https://files.catbox.moe/kqhno1.m4a" },
+{ file: "ottayadi paathayile", src: "https://files.catbox.moe/8t7en1.m4a" },
+{ file: "kudajadriyil", src: "https://files.catbox.moe/qd2f0a.m4a" },
+{ file: "chaanchaadi aadi", src: "https://files.catbox.moe/nsfdqe.m4a" },
+{ file: "mele mele maanam", src: "https://files.catbox.moe/1bmw2q.m4a" },
+{ file: "ethrayo janmamayi", src: "https://files.catbox.moe/hmwr9z.m4a" },
+{ file: "ghanashyama", src: "https://files.catbox.moe/7fgkot.m4a" },
+{ file: "Before I go", src: "https://files.catbox.moe/9l8pjc.mp3" },
+{ file: "zombie(sped up)", src: "https://files.catbox.moe/aaswli.mp4" },
+{ file: "01. Kaanal Kaatte", src: "https://files.catbox.moe/1eby5u.mp3" },
 
 
   
